# bayesian_topological_localisation

./: CMakeLists.txt  package.xml
.github/workflows/: ros-ci.yml
msg/: LikelihoodObservation.msg
srv/: Predict.srv  UpdatePoseObservation.srv
